syntax = "proto3";

import "google/protobuf/timestamp.proto";

package groupQueryService;

option go_package = "./;groupQueryService";

message Group {
  string ID = 1;
  string Name = 2;
  string Description = 3;
  string CreatorID = 4;
  bool   Active = 5;
  google.protobuf.Timestamp CreatedAt = 6;
  google.protobuf.Timestamp UpdatedAt = 7;
}

message CreateGroupReq {
  string ID = 1;
  string Name = 2;
  string Description = 3;
  string CreatorID = 4;
  bool   Active = 5;
}

message CreateGroupRes {
  string ID = 1;
}

message UpdateGroupReq {
  string ID = 1;
  string Name = 2;
  string Description = 3;
}

message UpdateGroupRes {
  string ID = 1;
}

message GetGroupByIdReq {
  string ID = 1;
}

message GetGroupByIdRes {
  Group Group = 1;
}

message SearchGroupReq {
  string Search = 1;
  int64 page = 2;
  int64 size = 3;
}

message SearchGroupRes {
  int64 TotalCount = 1;
  int64 TotalPages = 2;
  int64 Page = 3;
  int64 Size = 4;
  bool HasMore = 5;
  repeated Group Groups = 6;
}

message DeleteGroupByIdReq {
  string ID = 1;
}

message DeleteGroupByIdRes {}